--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,12 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - uses: Dovyski/setup-opencv-action@v1.1
       with:
         opencv-version: '4.5.5'
 
-    - uses: actions/checkout@v3
+    # - uses: actions/checkout@v3
 
     #----------------------------------------------------------------------------
     # deps
