--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,25 +18,24 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - uses: Dovyski/setup-opencv-action@v1.1
       with:
         opencv-version: '4.5.5'
 
-    # - uses: actions/checkout@v3
+
+    - uses: actions/checkout@v3
 
     #----------------------------------------------------------------------------
     # deps
     #----------------------------------------------------------------------------
 
-    # it install apt packages and create caches
-    - uses: awalsh128/cache-apt-pkgs-action@latest
-      with:
-        packages: libassimp-dev
-        version: 1.0.0
-        # execute_install_scripts: true  # if the pkg cannot be cached
-
-    -
+    # # it install apt packages and create caches
+    # - uses: awalsh128/cache-apt-pkgs-action@latest
+    #   with:
+    #     packages: libassimp-dev
+    #     version: 1.0.0
+    #     # execute_install_scripts: true  # if the pkg cannot be cached
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
