--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,18 +18,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Cache OpenCV
-      id: opencv-cache
-      uses: actions/cache@v2
+    - uses: actions/checkout@v3
+    - uses: Dovyski/setup-opencv-action@v1.1
       with:
-        path: ./opencv-install
-        key: ${{ runner.os }}-opencv-cache
-
-    - name: Install OpenCV
-      uses: rayandrews/with-opencv-action@v1
-      with:  
-        dir: ./opencv-install
-        cached: ${{ steps.opencv-cache.outputs.cache-hit }}
         opencv-version: '4.5.5'
 
 
