--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,12 +19,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: 9and3/setup-opencv-action@v1.1
+    - uses: Dovyski/setup-opencv-action@v1.1
       with:
         opencv-version: '4.5.5'
 
 
-    - uses: actions/checkout@v3
+    # - uses: actions/checkout@v3
 
     #----------------------------------------------------------------------------
     # deps
@@ -37,13 +37,13 @@ jobs:
     #     version: 1.0.0
     #     # execute_install_scripts: true  # if the pkg cannot be cached
 
-    - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      # run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -S . -B build
+    # - name: Configure CMake
+    #   # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
+    #   # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
+    #   # run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+    #   run: cmake -S . -B build
 
-    - name: Build
-      # Build your program with the given configuration
-      # run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      run: cmake --build build
+    # - name: Build
+    #   # Build your program with the given configuration
+    #   # run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+    #   run: cmake --build build
