--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: Dovyski/setup-opencv-action@v1.1
-      with:
-        opencv-version: '4.5.5'
-    #
+    # - uses: actions/checkout@v2
+    # - uses: Dovyski/setup-opencv-action@v1.1
+    #   with:
+    #     opencv-version: '4.5.5'
+    # run command sudo apt-get update
+    - name: Update apt-get
+      run: sudo apt-get update
 
     # - uses: actions/checkout@v3
 
