--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,20 +11,22 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-  configure_build_test:
+  build:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
-    # - uses: actions/checkout@v2
-    # - uses: Dovyski/setup-opencv-action@v1.1
-    #   with:
-    #     opencv-version: '4.5.5'
-    # run command sudo apt-get update
+    
+
     - name: Update apt-get
       run: sudo apt-get update
+
+    - uses: actions/checkout@v2
+    - uses: Dovyski/setup-opencv-action@v1.1
+      with:
+        opencv-version: '4.5.5'
 
     # - uses: actions/checkout@v3
 
