--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
-    # steps:
+    steps:
     # - uses: actions/checkout@v1
     #   with:
     #     token: ${{ secrets.ACCESS_TOKEN }}
