WIP: git actions  -- silent

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+
+    # download submodules
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Checkout submodules
+      uses: textbook/git-checkout-submodule-action@master
+      with:
+        remote: true
+
+
     # - uses: actions/checkout@v1
     #   with:
     #     token: ${{ secrets.ACCESS_TOKEN }}
