--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,8 @@ project(TTool VERSION "0.1.0" LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(BUILD_TSEGMENT_AS_API ON CACHE BOOL "Do not build tsegment exe")
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps/TSegment)
+# set(BUILD_TSEGMENT_AS_API ON CACHE BOOL "Do not build tsegment exe")
+# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps/TSegment)
 
 add_executable(ttool src/main.cc)
 
@@ -16,15 +16,15 @@ if(NOT OpenCV_FOUND)
     message(FATAL_ERROR "OpenCV 4.5.5 not found")
 endif()
 
-find_package(Threads REQUIRED)
-if(NOT Threads_FOUND)
-    message(FATAL_ERROR "Threads not found")
-endif()
+# find_package(Threads REQUIRED)
+# if(NOT Threads_FOUND)
+#     message(FATAL_ERROR "Threads not found")
+# endif()
 
-target_include_directories(ttool PRIVATE 
-                           ${CMAKE_CURRENT_SOURCE_DIR}/deps/TSegment
-                           ${OpenCV_INCLUDE_DIRS})
-target_link_libraries(ttool ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
+# target_include_directories(ttool PRIVATE 
+#                            ${CMAKE_CURRENT_SOURCE_DIR}/deps/TSegment
+#                            ${OpenCV_INCLUDE_DIRS})
+# target_link_libraries(ttool ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT})
 
 # #------------------------------------------------------------------------------------------------------------
 # # Check and update git submodules
