--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,10 +20,10 @@ jobs:
     steps:
 
 
-    # - uses: actions/checkout@v1
-    #   with:
-    #     token: ${{ secrets.ACCESS_TOKEN }}
-    #     submodules: true
+    - uses: actions/checkout@v1
+      with:
+        token: ${{ secrets.ACCESS_TOKEN }}
+        submodules: true
 
 
     - uses: actions/checkout@v3
