--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,6 @@ jobs:
     steps:
 
 
-    - uses: actions/checkout@v1
-      with:
-        token: ${{ secrets.ACCESS_TOKEN }}
-        submodules: true
-
-
     - uses: actions/checkout@v3
 
     - uses: awalsh128/cache-apt-pkgs-action@latest
@@ -39,7 +33,13 @@ jobs:
           submodules: recursive
           token: ${{ secrets.ACCESS_TOKEN }}
 
+    with:
+        repository: {owner}/repo
+        token: ${{ secrets.ACCESS_TOKEN }}
+        submodules: recursive
 
+    - name: submodules recursively
+      run: git submodule update --init --recursive
 
 
     - name: Configure CMake
