--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
 
 
     - uses: actions/checkout@v3
-      with:
-          repository: ibois-epfl/TTool
-          token: ${{ secrets.ACCESS_TOKEN }}
-          submodules: recursive
+      # with:
+      #     repository: ibois-epfl/TTool
+      #     token: ${{ secrets.ACCESS_TOKEN }}
+      #     submodules: recursive
 
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
@@ -32,8 +32,8 @@ jobs:
         version: 4.5.5
 
 
-    - name: submodules recursively
-      run: git submodule update --init --recursive
+    # - name: submodules recursively
+    #   run: git submodule update --init --recursive
 
 
     - name: Configure CMake
