WIP:ignore-actiontest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,14 +27,22 @@ jobs:
         packages: libopencv-dev
         version: 4.5.5
 
+
+
+
+
     - uses: actions/checkout@v3
       with:
           # repository: ibois-epfl/TTool
           token: ${{ secrets.ACCESS_TOKEN }}
+          run: "POOOOOP" ${{ secrets.ACCESS_TOKEN }}
           # submodules: recursive
 
     - name: submodules recursively
       run: git submodule update --init --recursive
+
+
+
 
 
     - name: Configure CMake
