--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,6 @@ jobs:
     steps:
 
 
-    
-
     - uses: awalsh128/cache-apt-pkgs-action@latest
       with:
         packages: libopencv-dev
@@ -33,9 +31,11 @@ jobs:
 
     - uses: actions/checkout@v3
       with:
-          # repository: ibois-epfl/TTool
+          repository: ibois-epfl/TTool
           token: ${{ secrets.ACCESS_TOKEN }}
-          run: "POOOOOP" ${{ secrets.ACCESS_TOKEN }}
+    
+    - name: test
+      run: "POOOOOP" ${{ secrets.ACCESS_TOKEN }}
           # submodules: recursive
 
     - name: submodules recursively
