--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -7,6 +7,12 @@ on:
   pull_request:
     branches: [ "main" ]
 
-runs:
-  using: 'docker'
-  image: 'Dockerfile'
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build the Docker image
+        working-directory: TTool
+        run: docker build -t ttool .
