--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         uses: actions/checkout@v3
-        
+
       - name: Build the Docker image
-        working-directory: TTool
-        run: docker build -t ttool .
+        run: docker build --file Dockerfile --tag ttool .
