--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -8,8 +8,11 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+
+  build-container:
+
     runs-on: ubuntu-latest
+    
     steps:
         uses: actions/checkout@v3
 
