--- a/.github/workflows/docker-cmake-build.yml
+++ b/.github/workflows/docker-cmake-build.yml
@@ -12,9 +12,9 @@ jobs:
   build-container:
 
     runs-on: ubuntu-latest
-    
-    steps:
-        uses: actions/checkout@v3
 
-      - name: Build the Docker image
-        run: docker build --file Dockerfile --tag ttool .
+    steps:
+    - uses: actions/checkout@v3
+
+    - name: Build the Docker image
+      run: docker build --file Dockerfile --tag ttool .
