dev: add exception for cpp

--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ include/divisible/*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+!.vscode/c_cpp_properties.json
 !.vscode/*.code-snippets
 
 # Local History for Visual Studio Code
