build: [BUG] dockerization

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,6 +8,9 @@
 		// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 		"dockerfile": "../Dockerfile"
 	},
+	"runArgs": [
+		"-v=/dev/video0:/dev/video0"
+	],
 	"customizations": {
 		"vscode": {
 			"extensions": [
