UPDATE: add transformations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(BUILD_TSEGMENT_AS_API ON CACHE BOOL "Do not build tsegment exe")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps/TSegment)
 
-add_executable(ttool src/main.cc src/camera.cc src/viewer.cc src/view.cc)
+add_executable(ttool src/main.cc src/camera.cc src/viewer.cc src/view.cc src/transformations.cc)
 
 
 # target_include_directories(ttool PUBLIC deps/TSegment)
