--- a/.gitignore
+++ b/.gitignore
@@ -64,8 +64,10 @@ include/divisible/*
 # Built Visual Studio Code Extensions
 *.vsix
 
-# # VScode config
-# .vscode/**
+# VScode config
+.vscode/**
 
 # clion config
 .idea
+
+model_*/**/*
