ADD: fragment visualizer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ if (BUILD_TTOOL_EXE)
                 src/transformations.cc
                 src/model.cc
                 src/global_param.cc
+                src/visualizer.hh
                 ${glsl_SOURCES})
     target_include_directories(ttool PRIVATE 
                             ${CMAKE_CURRENT_SOURCE_DIR}/deps/TSegment
