UPDATE: support Visualizer of multiple objects

--- a/live_camera/config.yml
+++ b/live_camera/config.yml
@@ -37,8 +37,8 @@ tracker_mode: 1
 ################
 # input
 ################
-gt_pose_file: "./model_drill_scaled/gt_pose.txt"
-model_file: ["./model_drill_scaled/drill_scaled_1000.obj"]
+gt_pose_file: "./live_camera/gt_pose.txt"
+model_file: ["./model_drill_scaled/drill_scaled_1000.obj", "./circular_blade_scaled/circular_blade_scaled.obj"]
 frames: ""
 camera_id: 2
 ################
