feat: download and extract model from the zenodo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,31 @@ set(CMAKE_CXX_STANDARD 17)
 set(BUILD_TSEGMENT_AS_API ON CACHE BOOL "Do not build tsegment exe")
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deps/TSegment)
 
+set(MODEL_NAMES 
+    "ck30"
+    "drillBit_14_105"
+    "drillBit_20_110"
+    "flachbohrer_25"
+    "forstnerbohrer_40"
+    "holzkombihorer_20"
+    "holzspiralbohrer_sp_20"
+    "selfFeedBits_40_90"
+    "selfFeedBits_50"
+)
+
+foreach(MODEL_NAME IN LISTS MODEL_NAMES)
+    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/assets/toolheads/${MODEL_NAME}.zip")
+        message(STATUS "Downloading tool head files from https://zenodo.org/record/8005648/files/${MODEL_NAME}.zip")
+        file(DOWNLOAD "https://zenodo.org/record/8005648/files/${MODEL_NAME}.zip" "${PROJECT_SOURCE_DIR}/assets/toolheads/${MODEL_NAME}.zip")
+        file(ARCHIVE_EXTRACT INPUT "${PROJECT_SOURCE_DIR}/assets/toolheads/${MODEL_NAME}.zip" DESTINATION "${PROJECT_SOURCE_DIR}/assets/toolheads/")
+        execute_process(
+            COMMAND ${CMAKE_COMMAND} -E rm ${PROJECT_SOURCE_DIR}/assets/toolheads/${MODEL_NAME}.zip
+        )
+    endif()
+endforeach()
+
+
+
 FILE(GLOB glsl_SOURCES src/shader/*.glsl)
 source_group("shader" FILES ${glsl_SOURCES})
 
