--- a/live_camera/config.yml
+++ b/live_camera/config.yml
@@ -18,9 +18,45 @@ groundTruthPoses:
    - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
        6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
        -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+   - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+       6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+       -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+   - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+       6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+       -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+   - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+       6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+       -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+#    - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+#        6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+#        -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+#    - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+#        6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+#        -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+#    - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+#        6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+#        -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]    
+#    - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+#        6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+#        -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+#    - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+#        6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+#        -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
+   - [ -8.19670618e-01, 4.34276074e-01, 3.73575330e-01, -2.55266726e-02,
+       6.23800933e-01, -7.81163394e-01, -5.72274745e-01, -6.49839401e-01,
+       -5.00227630e-01, -8.51761246e+01, -9.16908798e+01, 1.68067810e+02 ]
 modelFiles:
-   - "./model_drill_scaled/drill_scaled_1000.obj"
-   - "./saw_blade_scaled/saw_blade_thin_verythin.obj"
-   - "./circular_blade_scaled/circular_blade_scaled.obj"
+   - "./assets/toolheads/model_drill_scaled/drill_scaled_1000.obj"
+   - "./assets/toolheads/saw_blade_scaled/saw_blade_thin_verythin.obj"
+   - "./assets/toolheads/circular_blade_scaled/circular_blade_scaled.obj"
+#    - "./assets/toolheads/ck30/model.obj"
+#    - "./assets/toolheads/drillBit_14_105/model.obj"
+#    - "./assets/toolheads/drillBit_20_110/model.obj"
+#    - "./assets/toolheads/flachbohrer_25/flachbohrer_25.obj"
+#    - "./assets/toolheads/forstnerbohrer_40/forstnerbohrer_40.obj"
+#    - "./assets/toolheads/holzkombihorer_20/model.obj"
+#    - "./assets/toolheads/holzspiralbohrer_sp_20/obj_model/5kmodel.obj"
+#    - "./assets/toolheads/selfFeedBits_40_90/model.obj"
+#    - "./assets/toolheads/selfFeedBits_50/model.obj"
 frames: ""
 cameraID: 0
