ADD: option to call force download dataset: cmake -S . -B build -DREFRESH_DATASET=ON

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ FILE(GLOB ttool_SOURCES src/*.cc src/*.hh)
 include(cmake/options.cmake)
 include(cmake/dependencies.cmake)
 
-if (BUILD_TTOOL_EXE)
+if (OPT_BUILD_TTOOL_EXE)
     add_executable(ttool
                 ${ttool_SOURCES}
                 ${glsl_SOURCES})
