--- a/deps/CGAL/CMakeLists.txt
+++ b/deps/CGAL/CMakeLists.txt
@@ -527,8 +527,8 @@ if(CGAL_DISABLE_GMP)
   unset(GMPXX_FOUND CACHE)
   unset(MPFR_FOUND)
   unset(MPFR_FOUND CACHE)
-  unset(WITH_CGAL_Core)
-  unset(WITH_CGAL_Core CACHE)
+  unset(OPT_WITH_CGAL_Core)
+  unset(OPT_WITH_CGAL_Core CACHE)
   unset(CGAL_USE_GMP)
   unset(CGAL_USE_GMP CACHE)
   # Nasty trick to make sure <gmp.h> is not used when CGAL_DISABLE_GMP is TRUE
